Consume backend consume other backend

--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
 
       document.querySelector("main").innerHTML = output;
     }
+
+    // const a = fetch("http://localhost:3333/")
+    //   .then((response) => response.json())
+    //   .then((json) => console.log(json));
+
+    // console.log(a);
   </script>
 </html>
